// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at custom-engines\\\\library\\\\Windows_NT\\\\query_engine_napi-windows.dll.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query_engine_napi-windows.dll.node",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "README.md",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "README.md",
  "scripts",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at custom-engines\\\\library\\\\Windows_NT\\\\query_engine_napi-windows.dll.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features      : placeholder "
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query_engine_napi-windows.dll.node",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "README.md",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "README.md",
  "scripts",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at node_modules\\\\@prisma\\\\engines\\\\query_engine_napi-windows.dll.node)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features      : placeholder "
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query_engine_napi-windows.dll.node",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "query_engine_napi-windows.dll.node",
  "README.md",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query_engine_napi-windows.dll.node",
  "README.md",
  "scripts",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at node_modules\\\\@prisma\\\\engines\\\\query_engine_napi-windows.dll.node)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query_engine_napi-windows.dll.node",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "query_engine_napi-windows.dll.node",
  "README.md",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query_engine_napi-windows.dll.node",
  "README.md",
  "scripts",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules\\\\@prisma\\\\engines\\\\query-engine-windows.exe)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features      : placeholder "
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query_engine_napi-windows.dll.node",
  "schema.prisma",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "query-engine-windows.exe",
  "README.md",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-windows.exe",
  "README.md",
  "scripts",
]
`;

exports[`Library Preview Feature, uses default library 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules\\\\@prisma\\\\engines\\\\query-engine-windows.exe)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features      : placeholder "
`;

exports[`Library Preview Feature, uses default library: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query_engine_napi-windows.dll.node",
  "schema.prisma",
]
`;

exports[`Library Preview Feature, uses default library: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "query-engine-windows.exe",
  "README.md",
]
`;

exports[`Library Preview Feature, uses default library: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-windows.exe",
  "query_engine_napi-windows.dll.node",
  "README.md",
  "scripts",
]
`;
